# testtest

./: .gitmodules  Makefile.am  README.md  configure.ac  howto-automake  main.c
include/: calculate.h
lib/: Makefile.am  calculate.c  makesum.c
tests/: Makefile.am  test_calculate.c
